# skript-api

./: .gitignore  README.md  index.html  index.ts  package.json  render.yaml
public/scripts/: search.js
public/styles/: style.css
rust_api/: Cargo.toml
rust_api/src/: main.rs
